Updates MAINT and FROM Dockerfile Fields
Change-Id: I668b732e58e86b8abd2c040c1e279e454ebc88b6

--- a/docker/glance/glance-api/Dockerfile
+++ b/docker/glance/glance-api/Dockerfile
@@ -1,5 +1,7 @@
-FROM kollaglue/fedora-rdo-glance-base
-MAINTAINER Dan Radez <dradez@redhat.com>
+#FROM kollaglue/fedora-rdo-glance-base
+#MAINTAINER Dan Radez <dradez@redhat.com>
+FROM danehans/fedora-rdo-glance-base
+MAINTAINER Daneyon Hansen <danehans@cisco.com>
 
 ADD ./start.sh /start.sh
 CMD ["/start.sh"]
