--- a/docker/glance/glance-registry/Dockerfile
+++ b/docker/glance/glance-registry/Dockerfile
@@ -1,5 +1,7 @@
-FROM kollaglue/fedora-rdo-glance-base
-MAINTAINER Dan Radez <dradez@redhat.com>
+#FROM kollaglue/fedora-rdo-glance-base
+#MAINTAINER Dan Radez <dradez@redhat.com>
+FROM danehans/fedora-rdo-glance-base
+MAINTAINER Daneyon Hansen <danehans@cisco.com>
 
 ADD ./start.sh /start.sh
 CMD ["/start.sh"]
