WIP: Docker neutron-ovs-agent
Uses ovs userspace agent:

https://github.com/socketplane/docker-ovs
https://registry.hub.docker.com/u/davetucker/docker-ovs/

Will not work until neutron-ovs-agent does not install
openvswitch as a dep. This is because it will install the kernel
mod version of ovs instead of using the user mod container.

--- a/docker/neutron/neutron-base/Dockerfile
+++ b/docker/neutron/neutron-base/Dockerfile
@@ -1,4 +1,5 @@
-FROM kollaglue/fedora-rdo-base
+#FROM kollaglue/fedora-rdo-base
+FROM kollaglue/fedora-rdo-systemd:l3_ovs_wip
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
 RUN yum -y install openstack-neutron-ml2 ; yum clean all
