Adds Keystone Container-Set support
Previously, Keystone containers were configured for use in a
Kubernetes environment. This patch removed k8s dependencies and
adds container set functionality.

Implements: blueprint container-set-api-control

--- a/docker/keystone/Dockerfile
+++ b/docker/keystone/Dockerfile
@@ -3,13 +3,12 @@ MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
 #Install required packages
 RUN yum install -y openstack-keystone \
-	openstack-utils \
-	mariadb \
+	python-keystoneclient \
 	; yum clean all
 
-ADD ./start.sh /start.sh
-ADD ./check.sh /check.sh
+# Add start-up and check scripts
+ADD ./start.sh /opt/kolla/start.sh
+ADD ./check.sh /opt/kolla/check.sh
 
-EXPOSE 5000 35357
-
-CMD ["/start.sh"]
+# Run the Keystone start script
+CMD ["/opt/kolla/start.sh"]
