Removes Kubernetes Variables
Previously services_host script was being referenced by the
kolla-common script to set several variables. These variables are
unneeded in a non-k8s environment.

Closes-Bug: 1426202

--- a/docker/fedora-rdo-base/Dockerfile
+++ b/docker/fedora-rdo-base/Dockerfile
@@ -92,6 +92,4 @@ RUN yum install -y \
 	; yum clean all
 
 RUN mkdir -p /opt/kolla
-ADD service_hosts.sh /opt/kolla/service_hosts.sh
-ADD kolla-common.sh /opt/kolla/kolla-common.sh
-
+ADD ./kolla-common.sh /opt/kolla/kolla-common.sh
