--- a/docker/glance/glance-registry/Dockerfile
+++ b/docker/glance/glance-registry/Dockerfile
@@ -1,6 +1,8 @@
 FROM kollaglue/fedora-rdo-glance-base
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
-ADD ./start.sh /start.sh
-CMD ["/start.sh"]
+# Add startup script
+ADD ./start.sh /opt/kolla/start.sh
 
+# Run startup script
+CMD ["/opt/kolla/start.sh"]
