--- a/docker/cinder/cinder-iscsi/Dockerfile
+++ b/docker/cinder/cinder-iscsi/Dockerfile
@@ -1,7 +1,8 @@
 FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%base
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
-RUN yum -y install openstack-cinder && yum clean all
+RUN yum -y install \
+        iscsi-initiator-utils && yum clean all
 
 ADD ./start.sh /start.sh
 CMD ["/start.sh"]
