Add cinder into the docker compose setup
This patch is just for the docker-compose yaml files
that will start cinder.

Co-Authored-By: Daneyon Hansen danehans@cisco.com

Change-Id: I5386851e2247c00696704dc26a8a286451d4bf59

--- a/docker/cinder/cinder-volume/Dockerfile
+++ b/docker/cinder/cinder-volume/Dockerfile
@@ -1,6 +1,33 @@
 FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%cinder-base
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
-ADD ./start.sh /start.sh
+# Install supervisor
+RUN easy_install supervisor
 
-CMD ["/start.sh"]
+# Install supervisor-stdout
+RUN pip install supervisor-stdout
+
+# Install required packages
+#RUN yum install -y scsi-target-utils lsscsi lvm2 && yum clean all
+#RUN yum install -y lvm2 targetcli targetd && yum clean all
+#RUN yum install -y lvm2 targetcli scsi-target-utils && yum clean all
+#RUN yum install -y lvm2 targetcli && yum clean all
+RUN yum install -y lvm2 scsi-target-utils && yum clean all
+
+# Create cinder directory
+RUN mkdir -p /opt/kolla/cinder
+
+# Add start scripts
+ADD start-scripts/tgt.sh /opt/kolla/cinder/
+#ADD start-scripts/target.sh /opt/kolla/cinder/
+#ADD start-scripts/targetd.sh /opt/kolla/cinder/
+#ADD start-scripts/tgt-post-start.sh /opt/kolla/cinder/
+#ADD start-scripts/lvmetad.sh /opt/kolla/cinder/
+ADD start-scripts/volume.sh /opt/kolla/cinder/
+
+# Configure supervisord
+RUN mkdir -p /var/log/supervisor/
+ADD supervisord.conf /etc/
+
+# Start supervisor
+CMD ["/usr/bin/supervisord"]
