--- a/docker/nova-compute/nova-iscsi/Dockerfile
+++ b/docker/nova-compute/nova-iscsi/Dockerfile
@@ -1,9 +1,8 @@
 FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%base
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
-RUN yum -y install \
-        iscsi-initiator-utils && yum clean all
+RUN yum -y install iscsi-initiator-utils libiscsi && yum clean all
 
 ADD ./start.sh /start.sh
-CMD ["/start.sh"]
 
+CMD ["/start.sh"]
