--- a/compose/nova-compute.yml
+++ b/compose/nova-compute.yml
@@ -12,6 +12,7 @@ libvirt:
    env_file:
     - openstack.env
    volumes:
+#    - /dev/disk/by-path/:/dev/disk/by-path/
     - /run:/run
     - /sys/fs/cgroup:/sys/fs/cgroup
     - /var/lib/nova:/var/lib/nova
@@ -29,10 +30,18 @@ novacompute:
    env_file:
     - openstack.env
    volumes:
+#    - /dev/disk/by-path/:/dev/disk/by-path/
+#    - /var/run/iscsid.pid:/var/run/iscsid.pid
+#    - /lib/modules:/lib/modules:ro
+#    - /usr/sbin/iscsiadm:/usr/sbin/iscsiadm
+#    - /usr/sbin/iscsid:/usr/sbin/iscsid
+#    - /var/run/iscsid.pid:/var/run/iscsid.pid
+#    - /var/lock/iscsi:/var/lock/iscsi
     - /run:/run
     - /sys/fs/cgroup:/sys/fs/cgroup
     - /var/lib/nova:/var/lib/nova
     - /var/lib/libvirt:/var/lib/libvirt
     - /etc/libvirt/qemu:/etc/libvirt/qemu
+#    - /lib/modules:/lib/modules:ro
    volumes_from:
     - computedata
